Implemented flesh hook skill